@startuml

title __CONTROLLER's Class Diagram__\n

  namespace br.com.psytecnology {
    namespace rest.controller {
      class br.com.psytecnology.rest.controller.ClienteController {
          {static} - MENSAGEM_CLIENTE_NAO_ENCONTRADO : String
          + ClienteController()
          + delete()
          + findClienteAndFilter()
          + findProdutoById()
          + save()
          + update()
      }
    }
  }
  

  namespace br.com.psytecnology {
    namespace rest.controller {
      class br.com.psytecnology.rest.controller.PedidosController {
          + PedidosController()
          + delete()
          + getById()
          + save()
          + updateStatus()
      }
    }
  }
  

  namespace br.com.psytecnology {
    namespace rest.controller {
      class br.com.psytecnology.rest.controller.ProdutosController {
          {static} - MENSAGEM_PRODUTO_NAO_ENCONTRADO : String
          + ProdutosController()
          + delete()
          + findProdutoAndFilter()
          + findProdutoById()
          + save()
          + update()
      }
    }
  }
  

  namespace br.com.psytecnology {
    namespace rest.controller {
      class br.com.psytecnology.rest.controller.UsuarioController {
          - passwordEncoder : PasswordEncoder
          + UsuarioController()
          + autenticar()
          + criarUsuario()
      }
    }
  }
  

  br.com.psytecnology.rest.controller.ClienteController o-- br.com.psytecnology.domain.repository.ClientesRepository : clientesRepository
  br.com.psytecnology.rest.controller.PedidosController o-- br.com.psytecnology.service.PedidosService : pedidosService
  br.com.psytecnology.rest.controller.ProdutosController o-- br.com.psytecnology.domain.repository.ProdutosRepository : produtosRepository
  br.com.psytecnology.rest.controller.UsuarioController o-- br.com.psytecnology.security.jwt.JwtService : jwtService
  br.com.psytecnology.rest.controller.UsuarioController o-- br.com.psytecnology.service.UsuarioService : usuarioService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
